--- a/bootstrap/less/carousel.less
+++ b/bootstrap/less/carousel.less
@@ -93,7 +93,7 @@
 
 .carousel-control {
   position: absolute;
-  top: 47%;
+  top: 0;
   left: 0;
   bottom: 0;
   width: @carousel-control-width;
@@ -111,6 +111,11 @@
   &.right {
     left: auto;
     right: 0;
+  }
+  // icons are fontawesome
+  & .fa{
+    top:50%;
+    position: absolute;
   }
 
   // Hover/focus state
@@ -172,22 +177,21 @@
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
-  left: 50%;
+  left: 40%;
   z-index: 15;
-  width: 60%;
-  margin-left: -30%;
+  width: 50%;
   padding-left: 0;
   list-style: none;
-  text-align: center;
+  text-align: right;
 
   li {
     display: inline-block;
-    width:  10px;
-    height: 10px;
-    margin: 1px;
+    width:  20px;
+    height: 20px;
+    margin: 5px;
     text-indent: -999px;
-    border: 1px solid @carousel-indicator-border-color;
-    border-radius: 10px;
+    border: 2px solid @carousel-indicator-border-color;
+    border-radius: 20px;
     cursor: pointer;
 
     // IE8-9 hack for event handling
@@ -203,9 +207,7 @@
     background-color: rgba(0,0,0,0); // IE9
   }
   .active {
-    margin: 0;
-    width:  12px;
-    height: 12px;
+    margin: 5px;
     background-color: @carousel-indicator-active-bg;
   }
 }
