--- a/wp-content/themes/audio-active/css/bootstrap.css
+++ b/wp-content/themes/audio-active/css/bootstrap.css
@@ -1295,7 +1295,7 @@ h6,
   font-size: 16px;
 }
 p {
-  margin: 0 0 12.5px;
+  margin: 0 0 0;
 }
 .lead {
   margin-bottom: 25px;
@@ -6325,11 +6325,10 @@ button.close {
   top: 0;
   bottom: 0;
   left: 0;
-  width: 15%;
-  font-size: 20px;
+  width: 6%;
+  font-size: 30px;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
   background-color: rgba(0, 0, 0, 0);
   filter: alpha(opacity=50);
   opacity: .5;
@@ -6337,6 +6336,10 @@ button.close {
 .carousel-control.right {
   right: 0;
   left: auto;
+}
+.carousel-control .fa {
+  position: absolute;
+  top: 50%;
 }
 .carousel-control:hover,
 .carousel-control:focus {
@@ -6382,30 +6385,27 @@ button.close {
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
-  left: 50%;
+  left: 40%;
   z-index: 15;
-  width: 60%;
+  width: 50%;
   padding-left: 0;
-  margin-left: -30%;
-  text-align: center;
+  text-align: right;
   list-style: none;
 }
 .carousel-indicators li {
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 1px;
+  width: 20px;
+  height: 20px;
+  margin: 5px;
   text-indent: -999px;
   cursor: pointer;
   background-color: #000 \9;
   background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #fff;
-  border-radius: 10px;
+  border: 2px solid #fff;
+  border-radius: 20px;
 }
 .carousel-indicators .active {
-  width: 12px;
-  height: 12px;
-  margin: 0;
+  margin: 5px;
   background-color: #fff;
 }
 .carousel-caption {
@@ -6428,18 +6428,18 @@ button.close {
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
   .carousel-control .icon-next {
-    width: 30px;
-    height: 30px;
-    margin-top: -10px;
-    font-size: 30px;
+    width: 45px;
+    height: 45px;
+    margin-top: -15px;
+    font-size: 45px;
   }
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .icon-prev {
-    margin-left: -10px;
+    margin-left: -15px;
   }
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-next {
-    margin-right: -10px;
+    margin-right: -15px;
   }
   .carousel-caption {
     right: 20%;
