--- a/wp-content/themes/audio-active/css/drawer.css
+++ b/wp-content/themes/audio-active/css/drawer.css
@@ -13,11 +13,11 @@
   position: fixed;
   top: 0;
   z-index: 101;
-  width: 16.25rem;
+  width: 365px;
   height: 100%;
   overflow: hidden;
-  color: #222;
-  background-color: #fff;
+  color: white;
+  background-color: #3f3f3f;
 }
 
 .drawer-brand {
@@ -39,16 +39,18 @@
 
 .drawer-menu-item {
   display: block;
-  padding: .75rem;
-  font-size: 1rem;
-  color: #222;
-  text-decoration: none;
+  width: 100%;
+  height: 65px;
+  padding: 15px 20px;
+  font-size: 24px;
+  font-weight: 700;
+  color: white;
 }
 
 .drawer-menu-item:hover {
-  color: #555;
-  text-decoration: underline;
-  background-color: transparent;
+  color: white;
+  text-decoration: none;
+  background-color: #2a2a2a;
 }
 
 /*! overlay */
@@ -91,7 +93,7 @@
     Left
 \*!------------------------------------*/
 .drawer--left .drawer-nav {
-  left: -16.25rem;
+  left: -365px;
   -webkit-transition: left .6s cubic-bezier(.190, 1.000, .220, 1.000);
           transition: left .6s cubic-bezier(.190, 1.000, .220, 1.000);
 }
@@ -103,13 +105,13 @@
 }
 
 .drawer--left.drawer-open .drawer-hamburger {
-  left: 16.25rem;
+  left: 365px;
 }
 /*!------------------------------------*\
     Right
 \*!------------------------------------*/
 .drawer--right .drawer-nav {
-  right: -16.25rem;
+  right: -365px;
   -webkit-transition: right .6s cubic-bezier(.190, 1.000, .220, 1.000);
           transition: right .6s cubic-bezier(.190, 1.000, .220, 1.000);
 }
@@ -121,7 +123,7 @@
 }
 
 .drawer--right.drawer-open .drawer-hamburger {
-  right: 16.25rem;
+  right: 365px;
 }
 /*!------------------------------------*\
     Hamburger
@@ -131,14 +133,14 @@
   top: 0;
   z-index: 104;
   display: block;
-  width: 2rem;
-  box-sizing: content-box;
+  width: 65px;
+  height: 65px;
   padding: 0;
   padding-top: 18px;
-  padding-right: .75rem;
+  padding-right: 18px;
   padding-bottom: 30px;
-  padding-left: .75rem;
-  background-color: transparent;
+  padding-left: 18px;
+  background-color: #0afff9;
   border: 0;
   outline: 0;
   -webkit-transition: all .6s cubic-bezier(.190, 1.000, .220, 1.000);
@@ -149,9 +151,11 @@
 
 .drawer-hamburger:hover {
   cursor: pointer;
-  background-color: transparent;
+  background-color: #252525;
 }
-
+.drawer-hamburger:hover > .drawer-hamburger-icon, .drawer-hamburger:hover > .drawer-hamburger-icon:before, .drawer-hamburger:hover > .drawer-hamburger-icon:after {
+  background-color: #0afff9;
+}
 .drawer-hamburger-icon {
   position: relative;
   display: block;
@@ -162,8 +166,8 @@
 .drawer-hamburger-icon:before,
 .drawer-hamburger-icon:after {
   width: 100%;
-  height: 2px;
-  background-color: #222;
+  height: 3px;
+  background-color: #252525;
   -webkit-transition: all .6s cubic-bezier(.190, 1.000, .220, 1.000);
           transition: all .6s cubic-bezier(.190, 1.000, .220, 1.000);
 }
@@ -288,20 +292,20 @@
 
 @media (min-width: 75em) {
   .drawer--sidebar .drawer-nav {
-    width: 16.25rem;
+    width: 365px;
   }
 
   .drawer--sidebar.drawer--left .drawer-contents {
-    margin-left: 16.25rem;
+    margin-left: 365px;
   }
 
   .drawer--sidebar.drawer--right .drawer-contents {
-    margin-right: 16.25rem;
+    margin-right: 365px;
   }
 
   /*! container */
   .drawer--sidebar .drawer-container {
-    max-width: 60rem;
+    max-width: 365px;
   }
 }
 /*!------------------------------------*\
