--- a/wp-content/themes/audio-active/css/sandbox.css
+++ b/wp-content/themes/audio-active/css/sandbox.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
 }
 
-.item {
+/*.item {
   height: 2000px;
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -53,3 +53,4 @@ body {
 .bg-deepOrange {
   background-color: #ff5722;
 }
+*/
