--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -47,7 +47,7 @@ $bg-light-blue: #e6ffff;
 
 /* Lines */
 $line-grey: #ebebeb;
-$line-green: #c3fff9;
+$line-blue: #c3fff9;
 
 /* Text links */
 $textlink-inactive: #c3fff9;
@@ -61,16 +61,323 @@ $textlink-visited: #415c7d;
 /*--------------------------------------------------------------
 	# Mixins
 --------------------------------------------------------------*/
-@mixin text-sizing ($font-size-px, $font-size-rem, $font-weight){
+@mixin text-sizing($font-size-px, $font-size-rem, $font-weight) {
   font-size: $font-size-px;
   font-size: $font-size-rem;
   font-weight: $font-weight;
 }
+
+@mixin cut-corner($border-weight, $border-colour, $position) {
+  overflow: hidden;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-width: $border-weight;
+    border-style: solid;
+    @if $position == "top" {
+      top: 0;
+      right: 0;
+      border-color: $border-colour $border-colour transparent transparent;
+    } @else if $position == "bottom" {
+      bottom: 0;
+      left: 0;
+      border-color: transparent transparent $border-colour $border-colour;
+    }
+
+  }
+}
+
+@mixin triangle-bottom( $tri-colour ) {
+  $tri-colour: $bg-black !default;
+  position: relative;
+  background: $tri-colour;
+  &:after {
+    top: 100%;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(37, 37, 37, 0);
+    border-top-color: $tri-colour;
+    border-width: 20px;
+    margin-left: -20px;
+  }
+}
+
 /*--------------------------------------------------------------
 	# H tags
 --------------------------------------------------------------*/
 
-h1, h2, h3, h4{font-weight: 700;}
-.carousel-body{
-  @include text-sizing(24px, 1.333rem, 400);
+h1, h2, h3, h4 {
+  font-weight: 700;
+}
+
+//main button style
+.btn-action {
+  font-size: 14px;
+  padding: 3px 9px 3px 15px;
+  color: $bg-black;
+  background-color: $bg-neon-cta;
+  border-radius: 20px;
+  &:hover,
+  &:focus,
+  &.focus {
+    color: $bg-black;
+    text-decoration: none;
+    background-color: $bg-neon-cta-hover;
+  }
+
+  &:active,
+  &.active {
+    color: $bg-neon-cta;
+    background-color: $bg-black;
+  }
+}
+
+//top bar
+.site-branding {
+  background-color: $bg-black;
+  padding: 20px 85px 20px 20px;
+  max-height: 65px;
+  height: 65px;
+}
+
+a {
+  &.top-bar-links {
+    padding: 5px 5px 0;
+    text-decoration: none;
+    color: $bg-neon-cta;
+    &:hover {
+      color: white;
+    }
+  }
+}
+
+//carousel
+.carousel-text-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  .carousel-text-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: $bg-dark-grey;
+    opacity: .7;
+    width: 100%;
+    height: 100%;
+  }
+  .carousel-text {
+    padding: 15px 40px 40px 40px;
+    color: white;
+  }
+  .carousel-body {
+    font-size: 24px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    line-height: 1.2;
+  }
+}
+
+.carousel-arrow-bottom {
+  @include triangle-bottom($bg-black);
+}
+
+//latest articles
+.latest-articles {
+  & .article-module {
+    .article-date {
+      font-size: 13px;
+      margin-bottom: 5px;
+    }
+    .article-title a {
+      display: block;
+      font-size: 18px;
+      color: $bg-black;
+      text-decoration: none;
+      margin-bottom: 10px;
+    }
+    .article-excerpt {
+      font-size: 16px;
+      line-height: 1.2;
+      margin-bottom: 25px;
+    }
+    .image-container {
+      @include cut-corner(30px, white, "top");
+      margin-bottom: 10px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+
+.latest-arrow-bottom {
+  @include triangle-bottom(white);
+  height: 95px;
+  margin-top: 40px;
+  border-top: 1px solid $line-grey;
+  & a.btn-action {
+    margin-top: 30px;
+  }
+}
+
+//latest articles post page - 4 blocks
+.latest-articles-post {
+  position: relative;
+  border-top: 4px solid $bg-light-grey;
+  @include cut-corner(40px, $bg-light-grey, "top");
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding-top: 15px;
+  & .article-module {
+    & .image-container {
+      @include cut-corner(20px, white, "top");
+    }
+  }
+}
+
+//quote block
+.quote-block {
+  @include cut-corner(50px, white, "bottom");
+  position: relative;
+  background-color: $bg-light-blue;
+  text-align: center;
+  padding: 75px 20px;
+  & .fp-quote {
+    font-size: 22px;
+    line-height: 1.2;
+    font-weight: 400;
+    width: 65%;
+    margin: 40px auto;
+  }
+  & .fb-signature {
+
+  }
+}
+
+//article or post page
+article .entry-header {
+  margin-top: 30px;
+  & .post-image-container {
+    @include cut-corner(50px, white, "top");
+  }
+  & .article-date {
+    margin-top: 15px;
+  }
+}
+
+//side bar
+.textwidget {
+  position: relative;
+  padding-top: 30px;
+  > h2 {
+    font-size: 22px;
+    font-weight: 700;
+  }
+  > p {
+    font-size:16px;
+    line-height: 1.2;
+  }
+  .get-involved-widget {
+    @include cut-corner(15px, $line-blue, "top");
+    border: 15px solid $line-blue;
+    padding: 0 15px 15px 15px;
+    .btn-action {
+      margin-top:15px;
+    }
+  }
+  .award-widget {
+    @include cut-corner(15px, white, "top");
+    background-color: $bg-light-grey;
+    padding: 0 30px 30px 30px;
+    .btn-action {
+      margin-top:15px;
+    }
+  }
+  .quote-widget{
+    @include cut-corner(15px, $line-grey, "top");
+    border-top: 3px solid $line-grey;
+    border-bottom: 3px solid $line-grey;
+    padding: 30px;
+    .widget-quote{
+      font-size:18px;
+      width: 85%;
+    }
+    .widget-quote-author{
+      font-size:16px;
+      margin-top:10px;
+    }
+    .widget-quote-author-title{
+      font-size:14px;
+    }
+  }
+}
+
+//footer
+.site-info {
+  position: relative;
+}
+
+.info-symbols {
+  position: relative;
+  height: 100%;
+  display: block;
+  float: left;
+  & > .fa {
+    color: white;
+  }
+  & > .fa-map-marker {
+    margin-right: 11px;
+    font-size: 18px;
+  }
+  & > .fa-envelope {
+    margin-right: 5px;
+    font-size: 12px;
+  }
+  & > .fa-phone {
+    font-size: 16px;
+  }
+}
+
+.upper-footer {
+  @include cut-corner(30px, $bg-black, "top");
+  background-color: $bg-dark-grey;
+  padding: 20px;
+  position: relative;
+  & * a {
+    font-size: 16px;
+    color: white;
+    text-decoration: none;
+  }
+  & * .fa-chevron-right {
+    color: white;
+    font-size: 12px;
+    margin-left: 5px;
+  }
+}
+
+.lower-footer {
+  height: 60px;
+  padding: 20px 20px 10px 20px;
+  background-color: $bg-black;
+  color: white;
+  font-size: 16px;
+}
+
+//elements i can't find to remove
+.post-navigation {
+  display: none;
+}
+
+.entry-footer {
+  display: none;
 }
