--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -190,8 +190,8 @@ a {
   @include triangle-bottom($bg-black);
 }
 
-//latest articles
-.latest-articles {
+//latest and news articles
+.three-col-articles {
   & .article-module {
     .article-date {
       font-size: 13px;
@@ -238,6 +238,9 @@ a {
   margin-top: 40px;
   margin-bottom: 40px;
   padding-top: 15px;
+  & .latest-articles {
+    margin-top: 20px;
+  }
   & .article-module {
     & .image-container {
       @include cut-corner(20px, white, "top");
@@ -344,6 +347,7 @@ article .entry-header {
     font-size: 12px;
   }
   & > .fa-phone {
+    margin-right: 5px;
     font-size: 16px;
   }
 }
