--- a/wp-content/themes/audio-active/css/drawer.css
+++ b/wp-content/themes/audio-active/css/drawer.css
@@ -43,8 +43,13 @@
   height: 65px;
   padding: 15px 20px;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 400;
   color: white;
+}
+.drawer-menu-item > .fa{
+  color: aqua;
+  padding-left: 10px;
+  font-size: 20px;
 }
 
 .drawer-menu-item:hover {
@@ -447,16 +452,17 @@
   display: block;
   padding: 0;
   padding-right: .75rem;
-  padding-left: 1.5rem;
-  line-height: 3.75rem;
-  color: #222;
+  font-size: 20px;
+  padding-left: 45px;
+  height: 50px;
+  padding-top: 10px;
+  padding-bottom: 15px;
+  background-color: #222;
   text-decoration: none;
 }
 
 .drawer-dropdown-menu .drawer-menu-item:hover {
-  color: #555;
   text-decoration: underline;
-  background-color: transparent;
 }
 
 /*! open */
