--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -190,9 +190,25 @@ a {
   @include triangle-bottom($bg-black);
 }
 
+//page template
+.page-image{
+  img{
+    width:100%;
+  }
+}
+.page-content-corner {
+  @include cut-corner(40px, $line-grey, "top");
+  border-top: 3px solid $line-grey;
+  padding: 10px 0;
+  margin-top: 30px;
+}
+article p{
+  margin-bottom: 1rem;
+}
 //latest and news articles
 .three-col-articles {
   & .article-module {
+    margin-bottom: 30px;
     .article-date {
       font-size: 13px;
       margin-bottom: 5px;
