--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -71,6 +71,23 @@ a.top-bar-links {
   a.top-bar-links:hover {
     color: white; }
 
+.social-links-bottom {
+  background-color: #595959;
+  padding-bottom: 10px; }
+
+a.bottom-bar-links {
+  padding: 5px 5px 0;
+  text-decoration: none;
+  color: white; }
+  a.bottom-bar-links:hover {
+    color: white; }
+
+.carousel-col-md-12 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px; }
+
 .carousel-text-container {
   position: absolute;
   bottom: 0;
@@ -111,7 +128,7 @@ a.top-bar-links {
     margin-left: -20px; }
 
 .page-image img {
-  width: 50%; }
+  width: 100%; }
 
 .page-content-corner {
   overflow: hidden;
@@ -395,6 +412,7 @@ article .entry-header {
 .info-symbols {
   position: relative;
   height: 100%;
+  margin-top: 5px;
   display: block;
   float: left; }
   .info-symbols > .fa {
@@ -408,6 +426,8 @@ article .entry-header {
   .info-symbols > .fa-phone {
     margin-right: 5px;
     font-size: 16px; }
+  .info-symbols > a {
+    margin-right: 20px; }
 
 .upper-footer {
   overflow: hidden;
@@ -446,3 +466,50 @@ article .entry-header {
 
 .entry-footer {
   display: none; }
+
+.footer-gap {
+  margin-top: 20px; }
+
+@media only screen and (max-width: 767px) {
+  .carousel-col-md-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px; }
+  .carousel-text-container {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%; }
+    .carousel-text-container .carousel-text-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #595959;
+      opacity: 1;
+      width: 100%;
+      height: 100%; }
+  .upper-footer {
+    overflow: hidden;
+    position: relative;
+    background-color: #595959;
+    padding: 20px;
+    position: relative; }
+    .upper-footer::after {
+      content: '';
+      position: absolute;
+      height: 0;
+      width: 0;
+      border-width: 30px;
+      border-style: solid;
+      top: 0;
+      right: 0;
+      border-color: #252525 #252525 transparent transparent; }
+    .upper-footer * a {
+      font-size: 16px;
+      color: white;
+      text-decoration: none; }
+    .upper-footer * .fa-chevron-right {
+      color: white;
+      font-size: 12px;
+      margin-left: 5px; } }
