--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -161,6 +161,33 @@ a {
   }
 }
 
+
+//bottom social links container
+.social-links-bottom {
+  background-color: $bg-charcoal-grey;
+  padding-bottom: 10px;
+}
+
+//bottom social links bar
+a {
+  &.bottom-bar-links {
+    padding: 5px 5px 0;
+    text-decoration: none;
+    color: white;
+    &:hover {
+      color: white;
+    }
+  }
+}
+
+//carousel custom col-md-12 for text
+.carousel-col-md-12 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 //carousel
 .carousel-text-container {
   position: absolute;
@@ -196,7 +223,7 @@ a {
 //page template
 .page-image{
   img{
-    width:50%;
+    width:100%;
   }
 }
 .page-content-corner {
@@ -393,6 +420,7 @@ article .entry-header {
 .info-symbols {
   position: relative;
   height: 100%;
+  margin-top: 5px;
   display: block;
   float: left;
   & > .fa {
@@ -409,6 +437,10 @@ article .entry-header {
   & > .fa-phone {
     margin-right: 5px;
     font-size: 16px;
+  }
+
+  & > a {
+    margin-right: 20px;
   }
 }
 
@@ -444,4 +476,52 @@ article .entry-header {
 
 .entry-footer {
   display: none;
+}
+
+//footer gap space for mobile version
+.footer-gap {
+  margin-top: 20px;
+}
+
+@media only screen and (max-width: $small-device-max)  {
+
+  .carousel-col-md-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+
+  .carousel-text-container {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    .carousel-text-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: $bg-charcoal-grey;
+      opacity: 1;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .upper-footer {
+    @include cut-corner(30px, $bg-black, "top");
+    background-color: $bg-charcoal-grey;
+    padding: 20px;
+    position: relative;
+    & * a {
+      font-size: 16px;
+      color: white;
+      text-decoration: none;
+    }
+    & * .fa-chevron-right {
+      color: white;
+      font-size: 12px;
+      margin-left: 5px;
+    }
+  }
 }
