--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -470,6 +470,17 @@ article .entry-header {
 .footer-gap {
   margin-top: 20px; }
 
+/**********************************************************/
+/*
+.article-image > img {
+  width: 100%;
+  height: auto;
+}
+*/
+.container, .container-fluid {
+  min-width: 320px; }
+
+/*********************************************************/
 @media only screen and (max-width: 767px) {
   .carousel-col-md-12 {
     position: relative;
@@ -512,7 +523,42 @@ article .entry-header {
     .upper-footer * .fa-chevron-right {
       color: white;
       font-size: 12px;
-      margin-left: 5px; } }
+      margin-left: 5px; }
+  /*
+  .carousel-inner {
+    position: relative;
+    width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+  }
+  */
+  /*
+  .carousel-inner .carousel-text-container {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+  }
+  .carousel-inner .carousel-text {
+    height: 400px;
+  }
+  .article-image > img {
+    width: 100%;
+    height: auto;
+  }
+
+  .carousel-indicators {
+    position: absolute;
+    bottom: 45%;
+    left: 45%;
+    z-index: 15;
+    width: 50%;
+    padding-left: 0;
+    text-align: right;
+    list-style: none;
+  }
+ */ }
 
 @media only screen and (min-width: 992px) {
   .upper-footer {
