--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -482,7 +482,20 @@ article .entry-header {
 .footer-gap {
   margin-top: 20px;
 }
+/**********************************************************/
 
+//desktop carousel
+/*
+.article-image > img {
+  width: 100%;
+  height: auto;
+}
+*/
+.container, .container-fluid{
+  min-width: 320px;
+}
+/*********************************************************/
+//mobile responsiveness
 @media only screen and (max-width: $small-device-max)  {
 
   .carousel-col-md-12 {
@@ -524,8 +537,45 @@ article .entry-header {
       margin-left: 5px;
     }
   }
+  /*
+  .carousel-inner {
+    position: relative;
+    width: 100%;
+    max-height: 500px;
+    overflow: hidden;
+  }
+  */
+  /*
+  .carousel-inner .carousel-text-container {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+  }
+  .carousel-inner .carousel-text {
+    height: 400px;
+  }
+  .article-image > img {
+    width: 100%;
+    height: auto;
+  }
+
+  .carousel-indicators {
+    position: absolute;
+    bottom: 45%;
+    left: 45%;
+    z-index: 15;
+    width: 50%;
+    padding-left: 0;
+    text-align: right;
+    list-style: none;
+  }
+ */
 }
 
+
+//footer social links fix
 @media only screen and (min-width: $medium-device)  {
   .upper-footer {
     padding: 20px 0px 20px 20px;
