--- a/wp-content/themes/audio-active/css/audio-active-styles.css
+++ b/wp-content/themes/audio-active/css/audio-active-styles.css
@@ -524,30 +524,22 @@ article .entry-header {
       color: white;
       font-size: 12px;
       margin-left: 5px; }
-  /*
   .carousel-inner {
     position: relative;
     width: 100%;
     max-height: 500px;
-    overflow: hidden;
-  }
-  */
-  /*
+    overflow: hidden; }
   .carousel-inner .carousel-text-container {
     position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 400px;
-  }
+    height: 400px; }
   .carousel-inner .carousel-text {
-    height: 400px;
-  }
+    height: 400px; }
   .article-image > img {
     width: 100%;
-    height: auto;
-  }
-
+    height: auto; }
   .carousel-indicators {
     position: absolute;
     bottom: 45%;
@@ -556,9 +548,7 @@ article .entry-header {
     width: 50%;
     padding-left: 0;
     text-align: right;
-    list-style: none;
-  }
- */ }
+    list-style: none; } }
 
 @media only screen and (min-width: 992px) {
   .upper-footer {
