--- a/wp-content/themes/audio-active/sass/audio-active-styles.scss
+++ b/wp-content/themes/audio-active/sass/audio-active-styles.scss
@@ -180,12 +180,19 @@ a {
   }
 }
 
-//carousel custom col-md-12 for text
+//carousel custom-col-md-12 for text
 .carousel-col-md-12 {
   position: relative;
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+
+  @media only screen and (max-width: $small-device-max) {
+    position: relative;
+    min-height: 1px;
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
 
 //carousel
@@ -194,6 +201,9 @@ a {
   bottom: 0;
   left: 0;
   width: 100%;
+  @media only screen and (max-width: $small-device-max) {
+    position: relative;
+  }
   .carousel-text-background {
     position: absolute;
     top: 0;
@@ -202,6 +212,10 @@ a {
     opacity: .7;
     width: 100%;
     height: 100%;
+    @media only screen and (max-width: $small-device-max) {
+      background-color: $bg-charcoal-grey;
+      opacity: 1;
+    }
   }
   .carousel-text {
     padding: 15px 40px 40px 40px;
@@ -214,7 +228,20 @@ a {
     line-height: 1.2;
   }
 }
-
+.carousel-inner {
+  @media only screen and (max-width: $small-device-max) {
+    max-height: 500px;
+  }
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+.carousel-indicators {
+  @media only screen and (max-width: $small-device-max) {
+    display: none;
+  }
+}
 .carousel-arrow-bottom {
   @include triangle-bottom($bg-black);
 }
@@ -441,6 +468,9 @@ article .entry-header {
 
   & > a {
     margin-right: 20px;
+    @media only screen and (min-width: $medium-device)  {
+      margin-right: 0px;
+    }
   }
 }
 
@@ -449,6 +479,12 @@ article .entry-header {
   background-color: $bg-dark-grey;
   padding: 20px;
   position: relative;
+  @media only screen and (max-width: $small-device-max) {
+    background-color: $bg-charcoal-grey;
+  }
+  @media only screen and (min-width: $medium-device) {
+    padding: 20px 0px 20px 20px;
+  }
   & * a {
     font-size: 16px;
     color: white;
@@ -482,105 +518,7 @@ article .entry-header {
 .footer-gap {
   margin-top: 20px;
 }
-/**********************************************************/
 
-//desktop carousel
-/*
-.article-image > img {
-  width: 100%;
-  height: auto;
-}
-*/
 .container, .container-fluid{
   min-width: 320px;
-}
-/*********************************************************/
-//mobile responsiveness
-@media only screen and (max-width: $small-device-max)  {
-
-  .carousel-col-md-12 {
-    position: relative;
-    min-height: 1px;
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-
-  .carousel-text-container {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    .carousel-text-background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: $bg-charcoal-grey;
-      opacity: 1;
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  .upper-footer {
-    @include cut-corner(30px, $bg-black, "top");
-    background-color: $bg-charcoal-grey;
-    padding: 20px;
-    position: relative;
-    & * a {
-      font-size: 16px;
-      color: white;
-      text-decoration: none;
-    }
-    & * .fa-chevron-right {
-      color: white;
-      font-size: 12px;
-      margin-left: 5px;
-    }
-  }
-
-  .carousel-inner {
-    position: relative;
-    width: 100%;
-    max-height: 500px;
-    overflow: hidden;
-  }
-
-
-  .carousel-inner .carousel-text-container {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 400px;
-  }
-  .carousel-inner .carousel-text {
-    height: 400px;
-  }
-  .article-image > img {
-    width: 100%;
-    height: auto;
-  }
-
-  .carousel-indicators {
-    position: absolute;
-    bottom: 45%;
-    left: 45%;
-    z-index: 15;
-    width: 50%;
-    padding-left: 0;
-    text-align: right;
-    list-style: none;
-  }
-
-}
-
-
-//footer social links fix
-@media only screen and (min-width: $medium-device)  {
-  .upper-footer {
-    padding: 20px 0px 20px 20px;
-  }
-  .info-symbols > a {
-    margin-right: 0px;
-  }
 }
